<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/about"
          android:title="@string/about"
          android:icon="@android:drawable/ic_menu_info_details"
          app:showAsAction="always"/>
    <item android:id="@+id/refresh_balance"
          android:title="@string/refresh_balance"
          app:showAsAction="never"/>
    <item android:id="@+id/set_pin"
          android:title="@string/set_pin"
          app:showAsAction="never"/>
    <item android:id="@+id/change_pin"
          android:title="@string/chang_pin"
          app:showAsAction="never"/>
    <item android:id="@+id/unlock_pin"
          android:title="@string/unlock_pin"
          app:showAsAction="never"/>
    <item android:id="@+id/generate_from_seed"
          android:title="@string/generate_from_seed"
          app:showAsAction="never"/>
    <item android:id="@+id/check_sig_counters"
          android:title="@string/check_sig_counters"
          app:showAsAction="never"/>
    <item android:id="@+id/switch_network"
          android:title="@string/switch_network"
          app:showAsAction="never"/>
</menu>