<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrandProtection_VerifyProduct"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="146dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/label_key_index"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/keyIndexSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/key_index" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayMessage"
        android:layout_marginTop="150dp"
        android:layout_centerInParent="true"
        android:text="@string/tap_the_product_to_verify"
        android:textSize="30sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/verified"
        android:layout_width="77dp"
        android:layout_height="53dp"
        android:layout_centerInParent="true"
        android:src="@drawable/sharp_check_circle_black_18dp"
        android:visibility="invisible"
        android:contentDescription="@string/authentication_successful"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authSuccessful"
        android:visibility="invisible"
        android:layout_below="@+id/verified"
        android:layout_centerInParent="true"
        android:text="@string/authentication_successful"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:id="@+id/displayPid"
        android:text="@string/product_id"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/pId"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/displayPid"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_below="@+id/displayPid"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:id="@+id/displayPname"
        android:text="@string/product_name"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pName"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_below="@+id/pId"
        android:layout_marginStart="62dp"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@+id/displayPname"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:layout_below="@+id/displayPname"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:id="@+id/displaytime"
        android:text="@string/timestamp"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pTime"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_below="@+id/pName"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/displaytime"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:layout_below="@+id/displaytime"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:id="@+id/displaydate"
        android:text="@string/date"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pDate"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_below="@+id/pTime"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/displaydate"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:layout_below="@+id/displaydate"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:id="@+id/displayManufacturer"
        android:text="@string/manufacturer"
        android:textSize="18sp"

        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pManufacturer"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:layout_below="@+id/pDate"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/displayManufacturer"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible" />
</RelativeLayout>
