<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GenerateFromSeedActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"
            android:textAlignment="center" android:gravity="center" android:layout_margin="25dp">
        <TextView
                android:text="@string/enter_import_seed_to_generate_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="20sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/seed" android:hint="@string/import_seed"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pin"
                    android:hint="PIN (optional)" android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <ImageView
                android:id="@+id/image_nfc_icon"
                android:layout_width="117dp"
                android:layout_height="68dp" app:srcCompat="@drawable/nfc_logo"/>
        <TextView
                android:id="@+id/holdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hold_card"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>